--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -17,6 +17,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:adapter="@{vm.adapter}"
+        app:adapter="@{vm.adapterLD}"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </layout>
