--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -3,14 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-<variable
-    name="user"
-    type="com.github2136.base.entity.User" />
+
+        <variable
+            name="user"
+            type="com.github2136.base.entity.User" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#AEFCCF"
         android:orientation="vertical"
         android:padding="10dp">
 
