--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,5 +54,11 @@
             android:layout_height="wrap_content"
             android:onClick="@{view::onClick}"
             android:text="下载" />
+        <Button
+            android:id="@+id/btnDownload2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{view::onClick}"
+            android:text="下载" />
     </LinearLayout>
 </layout>
