--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="@{view::onClick}"
-            android:text="下载" />
+            android:text="多文件下载" />
     </LinearLayout>
 </layout>
