--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,10 +60,24 @@
             android:text="下载" />
 
         <Button
+            android:id="@+id/btnDownloadStop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{view::onClick}"
+            android:text="下载停止" />
+
+        <Button
             android:id="@+id/btnDownload2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="@{view::onClick}"
             android:text="多文件下载" />
+
+        <Button
+            android:id="@+id/btnDownload2Stop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{view::onClick}"
+            android:text="多文件下载停止" />
     </LinearLayout>
 </layout>
