--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -18,6 +19,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".view.activity.LoginActivity">
+
+        <include
+            layout="@layout/view_title"
+            bind:view="@{view}"
+            bind:vm="@{vm}" />
 
         <TextView
             android:layout_width="match_parent"
