--- a/basemvvm/src/main/res/values/colors.xml
+++ b/basemvvm/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#008577</color>
     <color name="colorRipple">#17FFFFFF</color>
     <color name="colorButton">#00574B</color>
     <color name="colorButtonDisable">#909090</color>
