--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,5 +143,11 @@
             android:layout_height="wrap_content"
             android:onClick="@{view::onClick}"
             android:text="多文件下载停止" />
+        <Button
+            android:id="@+id/btnDateTimeDialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{view::onClick}"
+            android:text="时间选择" />
     </LinearLayout>
 </layout>
