--- a/app/src/main/res/layout/activity_load_more.xml
+++ b/app/src/main/res/layout/activity_load_more.xml
@@ -13,18 +13,31 @@
             type="com.github2136.base.vm.activity.LoadMoreVM" />
     </data>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/srlList"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:Refreshing="@{vm.adapter.refreshing}"
-        app:onRefreshListener="@{view::onRefreshListener}">
+        android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvList"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/srlList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:adapter="@{vm.adapter}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            app:Refreshing="@{vm.adapter.refreshing}"
+            app:onRefreshListener="@{view::onRefreshListener}">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:adapter="@{vm.adapter}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <Button
+            android:id="@+id/btnRefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:onClick="@{view::onClick}" />
+    </RelativeLayout>
 </layout>
