--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,18 +7,18 @@
 
         <variable
             name="view"
-            type="com.github2136.base.view.activity.LoginActivity" />
+            type="com.github2136.base.view.activity.login.LoginActivity" />
 
         <variable
             name="vm"
-            type="com.github2136.base.vm.activity.LoginVM" />
+            type="com.github2136.base.view.activity.login.LoginVM" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".view.activity.LoginActivity">
+        tools:context=".view.activity.login.LoginActivity">
 
         <include
             layout="@layout/view_title"
