--- a/basemvvm/src/main/res/layout/item_util_load_more.xml
+++ b/basemvvm/src/main/res/layout/item_util_load_more.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="8dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
 
-    <TextView
-        android:id="@+id/tv_load_more"
-        style="@style/TextAppearance.MaterialComponents.Subtitle1"
-        android:layout_width="wrap_content"
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="加载中……" />
+        android:padding="8dp">
 
-    <ProgressBar
-        android:id="@+id/pb_load_more"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginRight="4dp"
-        android:layout_toLeftOf="@id/tv_load_more" />
-</RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_load_more"
+            style="@style/TextAppearance.MaterialComponents.Subtitle1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="加载中……" />
+
+        <ProgressBar
+            android:id="@+id/pb_load_more"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="4dp"
+            android:layout_toLeftOf="@id/tv_load_more" />
+    </RelativeLayout>
+</layout>
