--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,5 +46,20 @@
             android:layout_height="wrap_content"
             android:onClick="@{view::onClick}"
             android:text="登录" />
+
+        <Button
+            style="@style/BtnMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="0" />
+
+
+        <Button
+            style="@style/BtnSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="0" />
     </LinearLayout>
 </layout>
