--- a/basemvvm/src/main/res/drawable/btn_small_ripple_bg.xml
+++ b/basemvvm/src/main/res/drawable/btn_small_ripple_bg.xml
@@ -2,27 +2,19 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/colorRipple">
     <item>
-        <layer-list>
-            <item
-                android:bottom="5dp"
-                android:left="1dp"
-                android:right="1dp"
-                android:top="5dp">
-                <selector>
-                    <item android:state_enabled="false">
-                        <shape>
-                            <solid android:color="@color/colorButtonDisable" />
-                            <corners android:radius="3dp" />
-                        </shape>
-                    </item>
-                    <item>
-                        <shape>
-                            <solid android:color="@color/colorButton" />
-                            <corners android:radius="3dp" />
-                        </shape>
-                    </item>
-                </selector>
+        <selector>
+            <item android:state_enabled="false">
+                <shape>
+                    <solid android:color="@color/colorBaseButtonDisable" />
+                    <corners android:radius="3dp" />
+                </shape>
             </item>
-        </layer-list>
+            <item>
+                <shape>
+                    <solid android:color="@color/colorBaseButton" />
+                    <corners android:radius="3dp" />
+                </shape>
+            </item>
+        </selector>
     </item>
 </ripple>
